--- a/apps/demo/src/App.css
+++ b/apps/demo/src/App.css
@@ -35,6 +35,11 @@
 
 .card {
   padding: 2em;
+  display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
 }
 
 .read-the-docs {
